# BasicBlockMLToolkit

./: .gitignore  Cargo.toml  README.md  pyproject.toml
analyze/: Cargo.toml
analyze/src/: main.rs
collection/: .gitignore  Dockerfile  config.py  docker_manager.py  executor.py  main.py
collection/programs/: advanced_text.json  archive_utilities.json  awk.json  build_tools.json  compression.json  core_file_ops.json  coreutils_basic.json  csv_processing.json  curl.json  debugging_tools.json  development_tools.json  diff_tools.json  disk_analysis.json  editors.json  file_analysis.json  file_operations.json  file_permissions.json  find.json  gcc.json  git_operations.json  grep.json  hardware_info.json  job_control.json  locale_time.json  log_analysis.json  ls.json  make.json  math_operations.json  math_utilities.json  network_tools.json  nodejs.json  package_management.json  process_management.json  python.json  regex_patterns.json  security_tools.json  sed.json  sort.json  sorting_advanced.json  stream_processing.json  (+5 more)
core/: Cargo.toml
core/src/: basic_block.rs  incremental.rs  instruction.rs  lib.rs  sequence.rs  symbolize.rs  trace.rs
ffi/: Cargo.toml
ffi/src/: lib.rs  tokenizer.rs
logger/: Cargo.toml
logger/src/: event.rs  incremental.rs  instruction.rs  lib.rs  log.rs  trace.rs
ml/: dataset.py  embedding.py  inference.py  main.py  model.py  online_trainer.py  predictor.py  pyproject.toml  tokenizer.py  train.py
notebooks/: ml_example.ipynb
