[package]
name = "analyze"
version = "0.1.0"
edition.workspace = true

[dependencies]
logger_core = { path = "../core", package = "core" }
logger = { path = "../logger", package = "logger" }
serde = { version = "1.0.219", features = ["derive"] }
postcard = { version = "1.1.2", features = ["alloc"] }
hashbrown = "0.15.4"
anyhow = "1.0.98"
itertools = "0.14.0"
