[package]
name = "ffi"
version = "0.1.0"
edition.workspace = true

[lib]
name = "bb_toolkit"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25.1", features = ["hashbrown", "extension-module"] }
postcard = { version = "1.1.2", features = ["alloc"] }
hashbrown = { version = "0.15.4", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
bb_core = { path = "../core", package = "core" }